# IndustrialMagic

./: CMakeLists.txt  README.md
include/: environment3d.h  lake_water_shader.h  pixel_art_shader.h  terrain_panel.h  terrain_plane.h
include/terrain/: terrain_panel.h  terrain_plane.h
include/three/: procedural_forest.h  procedural_rocks.h
shaders/: lake_water.fs  pixel_art.fs
src/: environment3d.cpp  lake_water_shader.cpp  main.cpp  pixel_art_shader.cpp  terrain_panel.cpp  terrain_plane.cpp
src/terrain/: terrain_draw.cpp  terrain_geometry.cpp  terrain_internal.h  terrain_noise.cpp  terrain_panel.cpp  terrain_plane.cpp  terrain_render.cpp
src/three/: procedural_forest.cpp  procedural_rocks.cpp
